Fixing layout issues on mobile for cart overlay

--- a/assets/scss/cart-overlay.scss
+++ b/assets/scss/cart-overlay.scss
@@ -102,71 +102,45 @@
                 .column {
                     flex: 1 0 50%;
                     padding: 0px 5px;
-
-                    &:nth-child(2) {
-                        text-align: right;
-
-                        @media all and (max-width: $breakpoint-mobile) {
-                            flex: 0 0 40px;
-                        }
-
-                        .action {
-                            a {
-                                background: #FEA47F;
-                                color: #FFF;
-
-                                &:hover {
-                                    background: #FEA47F;
-                                    border: 2px solid #FEA47F;
-                                }
-                            }
-                        }
-                    }
-
-                    .action {
-                        display: inline-block;
-
-                        @media all and (max-width: $breakpoint-mobile) {
-                            width: 100%;
-                            margin-bottom: 15px;
-                        }
-
-                        a { 
-                            display: block;
-                            background: transparent;
-                            border: 2px solid #FEA47F;
-                            color: #FEA47F;
-                            text-decoration: none;
-                            font-weight: bold;
-                            transition: all 0.5s ease;
-
-                            @media all and (max-width: $breakpoint-mobile) {
-                                padding: 15px 15px;
-                                width: 100%;
-                                text-align: center;
-                            }
-
-                            &:hover {
-                                background: #FEA47F;
-                                color: #FFF;
-                            }
-                        }
-                    }
-
+                }
+                .close {
+                    flex: 0 0 50px;
+                    padding: 0px 5px;
+                    text-align: right;
                 }
             }
-        }
+            
+            .actions {
+                text-align: right;
+            
+                .action {
+                    display: inline-block;
 
-        .actions {
-            .split {
-                margin-top: 15px;
+                    @media all and (max-width: $breakpoint-mobile) {
+                        width: 100%;
+                        margin-top: 15px;
+                        margin-bottom: 15px;
+                    }
 
-                .column {
-                    &:nth-child(2) {
-                        text-align: right;
-    
+                    a { 
+                        display: block;
+                        background: transparent;
+                        border: 2px solid #FEA47F;
+                        background: #FEA47F;
+                        color: #FFF;
+                        text-decoration: none;
+                        font-weight: bold;
+                        transition: all 0.5s ease;
+
                         @media all and (max-width: $breakpoint-mobile) {
-                            flex: 0 0 50%;
+                            padding: 15px 15px;
+                            width: 100%;
+                            text-align: center;
+                        }
+
+                        &:hover {
+                            color: #FEA47F;
+                            background: #FFF;
                         }
                     }
                 }
